# benzi

./: README.md  benzi.py  pyproject.toml  requirements.txt
src/benzi/: __init__.py  notifier.py  player.py
