[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "benzi"
description = "big ben on your desktop."
version = "0.1"
authors = [
  { name="Jahin Z.", email="jahinzee@outlook.com" }
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
  "desktop-notifier",
  "schedule",
  "playsound@git+https://github.com/taconi/playsound"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: No Input/Output (Daemon)",
  "License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)",
  "Natural Language :: English",
  "Operating System :: OS Independent"
]

[project.scripts]
benzi = "benzi:main"
